# state-space-renderer

./: .gitignore  .gitmodules  LICENSE  Makefile.am  Makefile.in  README.md  README.org  a.out  analysis.ipynb  config.h.in  configure  configure.ac  parse_json.py
.github/workflows/: benchmark.yml
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.2  traces.3
benchmark/: benchmark_runtime_solver.cpp
benchmarks/: blas_benchmark.cpp  data.js  parse_json.py  solver_benchmark.cpp  system_benchmark.cpp  xgemv_benchmark.cpp
data/: data.js
dev/bench/: data.js
src/: blas_benchmark.cpp  renderer.cpp  renderer.h  sample.cpp  solver.cpp  solver.h  solver_benchmark.cpp  ssm_jackclient.cpp  state_space_system.cpp  state_space_system.h  system_benchmark.cpp  utils.cpp  utils.h  xgemv_benchmark.cpp
systems/: create_benchmark_systems.py  create_system.py  utils.py
tests/: test_datastream.cpp  test_renderer.cpp  test_solver.cpp  test_system.cpp
